<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="15sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/public_key"
            android:layout_marginTop="10dp"
            />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_top"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="2dp"
            android:hint="@string/import_public_key"
            android:textSize="13sp"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_top2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="15sp"
            android:textColor="@android:color/darker_gray"
            android:text="@string/private_key"
            android:layout_marginTop="10dp"
            />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_top2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="2dp"
            android:hint="@string/import_private_key"
            android:textSize="13sp"
            />
    </LinearLayout>
</ScrollView>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/b_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_keypair"
        android:textColor="@android:color/white"
        android:background="@drawable/selector_blue_round"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom"
        />
</FrameLayout>