<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/tv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_fator"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/tv_top2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_input_note"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:layout_margin="10dp"
        android:layout_below="@+id/tv_top"
        />
    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_id"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_margin="10dp"
        android:layout_below="@+id/tv_top2"
        />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_id"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_id"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:letterSpacing="0.5"
        android:background="@drawable/selector_edit"
        />
    <TextView
        android:id="@+id/tv_pincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_pincode"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_id"
        />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_pincode"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_pincode"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:letterSpacing="0.5"
        android:background="@drawable/selector_edit"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/b_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authority_enter"
        android:textColor="@android:color/white"
        android:background="@drawable/selector_blue_round"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>