<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/plaintext"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_top"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="2dp"
        android:paddingLeft="3dp"
        android:textSize="13sp"
        android:textColor="@android:color/black"
        android:background="@drawable/selector_edit"
        android:layout_below="@+id/tv_top"
        android:text="123456"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <ListView
        android:id="@+id/lv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_top"
        android:layout_above="@+id/b_bottom2"
        android:divider="@null"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/b_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_decrypt"
        android:textColor="@android:color/white"
        android:background="@drawable/selector_blue_round"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/b_bottom2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reencrypt"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/selector_white_round"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/b_bottom"
        />
</RelativeLayout>
